--- a/public/index.html
+++ b/public/index.html
@@ -2,4 +2,4 @@
 	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 	<script src="http://cdn.bootcss.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 	<script src="http://ie7-js.googlecode.com/svn/version/2.1(beta4)/IE9.js">IE7_PNG_SUFFIX=".png";</script>
-	[endif]--><link href="index.730243.css" rel="stylesheet"></head><body><div id="app"></div><script src="/static/u.js"></script><script type="text/javascript" src="vendor.8db3db.js"></script><script type="text/javascript" src="index.aa4e80.js"></script></body></html>
+	[endif]--><link href="index.730243.css" rel="stylesheet"></head><body><div id="app"></div><script src="/static/u.js"></script><script type="text/javascript" src="vendor.7eeecd.js"></script><script type="text/javascript" src="index.2fe5be.js"></script></body></html>
